--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,26 +1,16 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
 
 android {
-  compileSdkVersion 28
+  compileSdkVersion 29
   buildToolsVersion "29.0.1"
 
   defaultConfig {
-    minSdkVersion 19
+    minSdkVersion 16
     targetSdkVersion 28
     versionCode 1
     versionName "1.0"
-  }
-
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
-  }
-
-  kotlinOptions {
-    jvmTarget = JavaVersion.VERSION_1_8
   }
 
   testOptions {
@@ -42,33 +32,21 @@ dependencies {
   implementation(
       'androidx.appcompat:appcompat:1.0.2',
       'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha03',
-      'com.google.dagger:dagger:2.24',
       "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   )
   testImplementation(
       'android.arch.core:core-testing:1.1.1',
       'androidx.test.espresso:espresso-core:3.2.0',
       'androidx.test.ext:junit:1.1.1',
-      'com.google.dagger:dagger:2.24',
       'com.google.truth:truth:0.43',
       'junit:junit:4.12',
       'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.2',
       'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.2',
       'org.mockito:mockito-core:2.19.0',
-      'org.robolectric:robolectric:4.3',
+      'org.robolectric:robolectric:4.3'
   )
-  kapt(
-      'com.google.dagger:dagger-compiler:2.24'
-  )
-  kaptTest(
-      'com.google.dagger:dagger-compiler:2.24'
-  )
-  // TODO(#59): Avoid needing to expose data implementations to other modules in order to make Oppia symbols
-  // sufficiently visible for generated Dagger code. This can be done more cleanly via Bazel since dependencies can be
-  // controlled more directly than in Gradle.
-  api project(':data')
-  implementation project(':model')
-  implementation project(':utility')
+  implementation project(":model")
+  implementation project(":utility")
 }
 repositories {
   mavenCentral()
