--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
     android:theme="@style/OppiaTheme">
     <activity android:name=".player.exploration.ExplorationActivity"/>
     <activity android:name=".topic.TopicActivity"/>
-    <activity android:name="org.oppia.app.home.HomeActivity">
+    <activity android:name="org.oppia.app.home.HomeActivity" />
+    <activity android:name=".splash.SplashActivity"
+              android:theme="@style/SplashScreenTheme">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
@@ -22,9 +24,6 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
       </intent-filter>
-    </activity>
-    <activity android:name=".splash.SplashActivity"
-              android:theme="@style/SplashScreenTheme">
     </activity>
     <activity android:name=".testing.BindableAdapterTestActivity"/>
   </application>
